fixing overflow on half slide text panes

--- a/resume/src/index.css
+++ b/resume/src/index.css
@@ -78,6 +78,7 @@
 	width: 90%;
 	padding:5%;
     height: 90%;
+    overflow: hidden;
 }
 
 .pane {
@@ -122,6 +123,7 @@
     display: flex;
     align-items: center;
 	height: 100%;
+	width: 100%;
 	position: sticky;
 }
 
@@ -162,6 +164,7 @@ img {
 
 body, html {
   height: 100%;
+  width: 100%;
   margin: 0px;
 }
 
